# Di-Scriber

./: Cargo.toml  README.md  config.toml
src/: config.rs  handler.rs  main.rs
src/handler/: handler.rs  interactions.rs
src/handler/events/: interaction_create.rs  ready.rs
src/handler/interactions/: commands.rs  components.rs  modals.rs
src/handler/interactions/commands/: create.rs
src/handler/interactions/components/: edit.rs
src/handler/interactions/modals/: edit.rs
