[package]
name = "Di-Scriber"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = {version = "0.12", features = ["builder", "client", "gateway", "model", "utils", "collector"]}
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
config = "0.15.11"
serde = {version = "1.0", features = ["derive"]}
once_cell = "1.21.3"